src/objects/Plan_Update_Request_B__b.object
<CustomObject>
    <description>MG_Plan Update Request</description>
    <fields>
        <fullName>Auto_Approval_Result__c</fullName>
        <label>Auto Approval Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_in_Price__c</fullName>
        <label>Change in Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plan_Update_Requests_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Display_in_Zonda__c</fullName>
        <label>Display in Zonda</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garage__c</fullName>
        <label>Garage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plan_Update_Requests_B1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <label>Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Plan Update Request Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Baths__c</fullName>
        <label># of Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Beds__c</fullName>
        <label># of Beds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Floors__c</fullName>
        <label># of Floors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Full_Baths__c</fullName>
        <label># of Full Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Half_Baths__c</fullName>
        <label># of Half Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Market__c</fullName>
        <label>Off-Market</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>New Plan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Notes__c</fullName>
        <label>Plan Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Update_Request__c</fullName>
        <label>Plan Update Request</label>
        <referenceTo>Plan_Update_Request__c</referenceTo>
        <relationshipName>Plan_Update_Requests_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Garage__c</fullName>
        <label>Previous Garage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Baths__c</fullName>
        <label>Previous # of Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Beds__c</fullName>
        <label>Previous # of Beds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Floors__c</fullName>
        <label>Previous # of Floors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Full_Baths__c</fullName>
        <label>Previous # of Full Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Half_Baths__c</fullName>
        <label>Previous # of Half Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Off_Market__c</fullName>
        <label>Previous Off-Market</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Plan_Name__c</fullName>
        <label>Previous Plan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Plan_Notes__c</fullName>
        <label>Previous Plan Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Price__c</fullName>
        <label>Previous Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Square_Footage__c</fullName>
        <label>Previous Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Unchanged__c</fullName>
        <label>Price Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Update_Request__c</fullName>
        <label>Project Update Request</label>
        <referenceTo>Project_Update_Request__c</referenceTo>
        <relationshipName>Plan_Update_Requests_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Plan_Update_Requests_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Request_Status__c</fullName>
        <label>Update Request Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Request_Type__c</fullName>
        <label>Update Request Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>Plan_Update_Request_Index</fullName>
        <fields>
            <name>Name__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Plan Update Request Index</label>
    </indexes>
    <label>Plan Update Request</label>
    <pluralLabel>Plan Update Requests</pluralLabel>
</CustomObject>